# rl-scaling-laws

./: .gitignore  README.md  eval.py  jsonl_to_parquet.py  main.py  pyproject.toml  train.py  train.sh  train_qwen3_gsm8k_grpo.sh  upload_to_hf.sh  verl_to_hf.sh
analysis/: compute_vs_performance.py  gsm8k.py  gsm8k_scaling_laws.py  math_and_mmlu.py  plot_baselines.py  rl_plots_0.6b_1.py  rl_plots_0.6b_3.py  rl_plots_1.7b_math_and_mmlu.py  rl_plots_4b_all.py  scaling_laws.py  simple_rl_plot.py
data/gsm8k/: test.parquet  train.parquet
eval/: gsm8k.py  main.py  math.py  mmlu.py  results.json  run.py  val_loss.py  val_losses.json
results/: 0.6b.json  1.7b.json  14b.json  4b.json  8b.json  baselines_flexible.json  baselines_flexible_custom.json  baselines_strict.json  baslines.json  benchmarks.json  export.csv  rl_results_0.6b_1.json  rl_results_0.6b_2_domain_transfer.json  rl_results_0.6b_3_math_transfer.json  rl_results_1.7b_gsm8k.json  rl_results_1.7b_math_and_mmlu.json  rl_results_4b.json
rl/: custom_gsm8k_reward.py
scripts/: clean_export.py  upload_to_hf.sh  verl_to_hf.sh
utils/: custom_gsm8k_reward.py  get_gsm8k.py  reward_wrappers.py
