[project]
name = "rl-scaling-laws"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "setuptools>=79.0.1",
    "sync>=1.0.0",
    "torch>=2.7.1",
    "uv>=0.8.10",
    "verl>=0.5.0",
    "vllm>=0.10.0",
    "wandb>=0.21.1",
    "flash-attn>=2.8.2",
    "flashinfer-python>=0.2.11.post3",
    "matplotlib>=3.10.5",
    "datasets>=4.0.0",
]
[tool.uv]
no-build-isolation-package = ["flash-attn"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "WARNING"

[[tool.uv.dependency-metadata]]
name = "flash-attn"
version = "2.7.4.post1"
requires-dist = ["torch", "einops", "setuptools"]
